<resources>
    <string name="app_name">Sololingo</string>
    <string name="help" translatable="false">Help</string>
    <!--Resource string English-en <string name=""></string>-->
    <string name="Login_successful">Login successful</string>
    <string name="Please_verify_your_email">Please verify your email</string>
    <string name="You_have_to_input_all_form">You have to input all form</string>
    <string name="Your_date_of_birth_is_wrong">Your date of birth is in wrong format!</string>
    <string name="Your_have_to_input_old_password">You have to input old password</string>
    <string name="Your_have_to_input_new_password">You have to input new password</string>
    <string name="Your_password_have_been_changed">Your password have been changed</string>
    <string name="Change_password_fail">Change password fail</string>
    <string name="Your_old_password_is_wrong">Your old password is wrong</string>
    <string name="Your_email_is_wrong">Your email is in wrong format!</string>
    <string name="Your_password_not_matching_with_re_password">Your password not matching with re-password</string>
    <string name="register_successful">Register successful, check your email to enable your account</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="Email">Email</string>
    <string name="Dont_have_account">Do not have an account? Sign up.</string>
    <string name="Register">Register</string>
    <string name="Name">Name</string>
    <string name="Date_of_birth">Date of birth</string>
    <string name="Re_Enter_password">Re-Enter password</string>
    <string name="Email2">Email: </string>
    <string name="Old_Password">Old Password</string>
    <string name="New_Password">New Password</string>
    <string name="Update">Update</string>
    <string name="Log_out">Log out</string>
    <string name="Next">Next</string>
    <string name="Submit">Submit</string>
    <string name="Finish_Review">Finish Review</string>
    <string name="default_answer">Default answer</string>
    <string name="default_name">Default name</string>
    <string name="default_email">defaul@gmail.com</string>
    <string name="User_profile">User profile</string>
    <string name="Mocking_Test">Mocking Test</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="reading">Reading</string>
    <string name="listening">Listening</string>
    <string name="home">Home</string>
    <string name="N5" translatable="false">N5</string>
    <string name="N4" translatable="false">N4</string>
    <string name="N3" translatable="false">N3</string>
    <string name="N2" translatable="false">N2</string>
    <string name="N1" translatable="false">N1</string>
    <string name="mark">Mark</string>
    <string name="submit">Submit</string>
    <string name="Function_upcoming">Function upcoming</string>
    <!--Resource string English-en <string name=""></string>-->
    <string name="textTranslate">Enter text</string>
    <string name="tabTranslate">"Translate"</string>
    <string name="tabMemo">"Memo"</string>
    <string name="tabWord">"Flashcards"</string>
    <string name="sourceText">Source Text</string>
    <string name="or">Or</string>
    <string name="saySomething">Say Something</string>
    <string name="textToTranslate">Text to translate</string>
    <string name="switchLanguage">Switch Language</string>
    <string name="mic">Microphone</string>
    <string name="title">Title</string>
    <string name="noteContent">Memo content</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="yourSubject">Yours subject(s)</string>
    <string name="darkTheme">Change Theme</string>
    <string name="displayLanguage">Language</string>
    <string name="appearance">Appearance</string>
    <string name="restart_to_change">Please restart to apply changes</string>
    <string name="let_hear">Let us hear your beautiful voice</string>
    <string name="please_wait">Please wait while we making calls to the Oracles</string>
    <string name="error_download">Model could not be downloaded because internet connection or other internal error.</string>
    <string name="try_again">Something went wrong. Try again when the model finish downloading</string>
    <string name="disable_notify">Disable</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notification_set_confirm">Notification time changed successfully</string>
    <string name="notification_cancel_confirm">Notification disabled successfully</string>


    <string name="hint_subjectName">Subject Name</string>
    <string name="hint_Word">Word</string>
    <string name="hint_WordDefinition">Word Definition</string>
    <string name="msg_confirmDeleteSubject">Delete a Subject also delete all words in it. Confirm to delete this Subject?</string>
    <string name="msg_confirmDeleteWord">Confirm to delete this Word?</string>
    <string name="msg_updateSubject">Update Subject successfully</string>
    <string name="msg_updateWord">Update Word successfully</string>
    <string name="msg_deleteSubjectSuccess">Delete Subject successfully</string>
    <string name="msg_deleteWordSuccess">Delete Word successfully</string>
    <string name="msg_listWordEmpty">Your words list is empty, try to insert some words and start learning!</string>
    <string name="fillAll">You have to fill both Word and Word Definition</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="open_navigation_drawer" translatable="false">Open navigation drawer</string>
    <string name="close_navigation_drawer" translatable="false">Close navigation drawer</string>

    <string-array name="languages">
        <item>Tiếng Việt</item>
        <item>English</item>
        <item>日本語</item>
    </string-array>
</resources>